--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pkgcloud": "0.8.x",
     "useradd": "0.0.2",
     "mkdirp": "0.3.5",
-    "semver": "2.1.x"
+    "semver": "2.1.x",
+    "rimraf": "2.2.x"
   },
   "publishConfig": {
     "registry": "http://reg.njitsu.net:5984/"
