--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "async": "0.2.x",
     "optimist": "0.6.x",
     "pkgcloud": "0.8.x",
-    "useradd": "0.0.2",
+    "useradd": "0.0.x",
     "mkdirp": "0.3.5",
     "semver": "2.1.x",
     "rimraf": "2.2.x"
