--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "useradd": "0.0.x",
     "mkdirp": "0.3.5",
     "semver": "2.1.x",
-    "rimraf": "2.2.x"
+    "rimraf": "2.2.x",
+    "uid-number": "~0.0.3"
   },
   "publishConfig": {
     "registry": "http://reg.njitsu.net:5984/"
