--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "semver": "2.1.x",
     "rimraf": "2.2.x",
     "uid-number": "~0.0.3",
-    "killer": "0.1.x"
+    "killer": "0.1.x",
+    "winston": "~0.7.2"
   },
   "publishConfig": {
     "registry": "http://reg.njitsu.net:5984/"
