--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solenoid",
   "decription": "Application jump starter",
-  "version": "0.5.7",
+  "version": "0.5.7-0",
   "author": "Nodejitsu Inc <info@nodejitsu.com>",
   "main": "./lib/solenoid.js",
   "bin": {
