--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "decription": "Application jump starter",
   "version": "0.5.8",
   "author": "Nodejitsu Inc <info@nodejitsu.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nodejitsu/solenoid.git"
+  },
   "main": "./lib/solenoid.js",
   "bin": {
     "solenoid": "./bin/solenoid"
