--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solenoid",
   "decription": "Application jump starter",
-  "version": "0.5.9",
+  "version": "0.5.9-1",
   "author": "Nodejitsu Inc <info@nodejitsu.com>",
   "repository": {
     "type": "git",
