--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "async": "0.2.x",
+    "back": "0.1.x",
     "optimist": "0.6.x",
     "pkgcloud": "0.8.x",
     "mkdirp": "0.3.5",
