[fix?] will node-tar make larger snapshots possible? or will this cause more pain? cc @isaacs

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "rimraf": "2.2.x",
     "uid-number": "~0.0.3",
     "killer": "0.1.x",
-    "winston": "~0.7.2"
+    "winston": "~0.7.2",
+    "tar": "~0.1.18"
   },
   "license": "MIT"
 }
